--- a/chalé hotel/index.html
+++ b/chalé hotel/index.html
@@ -40,18 +40,62 @@
             </div><!--fim do topo-->
             <div id="area-principal">
                 <Div class="conteudo">
-                    Area Principal
+                    <h2>Lorem Ipsum</h2>
+                    <p>
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                    </p>
+
+                    <p>
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                    </p>
+
+                    <p>
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                    </p>
+
                 </Div>
 
             </div>
             <div id="area-lateral">
                 <div class="conteudo">
-                    area-lateral
+                    <ul id="beneficios">
+                        <li>
+                            <a href="">
+                                <img src="source/imagens/apartamento.jpg" width="150px" alt="apartamento">
+                                <h3>apartamento</h3>
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda eius minima delectus quasi, expedita quis minus amet non obcaecati neque dolorum iste fuga ducimus, nemo et repellendus odio nihil dignissimos.
+                                </p>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="">
+                                <img src="source/imagens/restaurante.jpg" width="150px" alt="restaurante">
+                                <h3>restaurante</h3>
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda eius minima delectus quasi, expedita quis minus amet non obcaecati neque dolorum iste fuga ducimus, nemo et repellendus odio nihil dignissimos.
+                                </p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="source/imagens/piscina.jpg" width="150px" alt="piscina">
+                                <h3>piscina</h3>
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda eius minima delectus quasi, expedita quis minus amet non obcaecati neque dolorum iste fuga ducimus, nemo et repellendus odio nihil dignissimos.
+                                </p>
+                            </a>
+                        </li>
+
+                    </ul>
                 </div>
 
             </div>
             <div id="rodape">
-                rodape
+                <span>
+                    &copy; copyright 2000 - 2022 Chalé Hotel
+                </span>
             </div>
         </div><!--fim do container-->
 
